add statusnotifier dbus

--- a/org.qbittorrent.qBittorrent.yaml
+++ b/org.qbittorrent.qBittorrent.yaml
@@ -20,6 +20,7 @@ finish-args:
   - --talk-name=org.freedesktop.Notifications
   - --talk-name=org.freedesktop.PowerManagement
   - --talk-name=org.gnome.SessionManager
+  - --own-name=org.kde.StatusNotifierItem-2-2
 cleanup:
   - /include
   - /lib/pkgconfig
