--- a/org.qbittorrent.qBittorrent.yaml
+++ b/org.qbittorrent.qBittorrent.yaml
@@ -1,24 +1,14 @@
 app-id: org.qbittorrent.qBittorrent
-default-branch: stable
+default-branch: nox
 runtime: org.kde.Platform
 sdk: org.kde.Sdk
 runtime-version: 5.15-21.08
-command: qbittorrent
-rename-icon: qbittorrent
-copy-icon: true
+command: qbittorrent-nox
 finish-args:
-  - --device=dri
   - --filesystem=host
-  - --share=ipc
   - --share=network
-  - --socket=fallback-x11
-  - --socket=wayland
   - --system-talk-name=org.freedesktop.login1
   - --system-talk-name=org.freedesktop.UPower
-  - --talk-name=org.freedesktop.Notifications
-  - --talk-name=org.freedesktop.PowerManagement
-  - --talk-name=org.gnome.SessionManager
-  - --talk-name=org.kde.StatusNotifierWatcher
 cleanup:
   - /include
   - /lib/*.a
@@ -73,6 +63,7 @@ modules:
     config-opts:
       - -DCMAKE_BUILD_TYPE=RelWithDebInfo
       - -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
+      - -DGUI=OFF
     sources:
       - type: archive
         url: https://github.com/qbittorrent/qBittorrent/archive/refs/tags/release-4.5.1.tar.gz
