--- a/org.qbittorrent.qBittorrent.yaml
+++ b/org.qbittorrent.qBittorrent.yaml
@@ -82,3 +82,5 @@ modules:
             | sub("^release-"; "")
           url-query: '"https://github.com/qbittorrent/qBittorrent/archive/refs/tags/release-"
             + $version + ".tar.gz"'
+      - type: patch
+        path: metadata.patch
