Use CMake flag for requiring C++20

--- a/org.qbittorrent.qBittorrent.yaml
+++ b/org.qbittorrent.qBittorrent.yaml
@@ -48,12 +48,10 @@ modules:
   - name: libtorrent
     buildsystem: cmake-ninja
     builddir: true
-    build-options:
-      cflags: -std=c++20
-      cxxflags: -std=c++20
     config-opts:
       - -DBUILD_SHARED_LIBS=OFF
       - -DCMAKE_BUILD_TYPE=RelWithDebInfo
+      - -DCMAKE_CXX_STANDARD=20
       - -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON
       - -Ddeprecated-functions=OFF
     sources:
