--- a/org.qbittorrent.qBittorrent.yaml
+++ b/org.qbittorrent.qBittorrent.yaml
@@ -1,7 +1,7 @@
 app-id: org.qbittorrent.qBittorrent
 runtime: org.kde.Platform
 sdk: org.kde.Sdk
-runtime-version: 6.9
+runtime-version: '6.9'
 command: qbittorrent
 rename-icon: qbittorrent
 copy-icon: true
