--- a/org.qbittorrent.qBittorrent.yaml
+++ b/org.qbittorrent.qBittorrent.yaml
@@ -78,3 +78,8 @@ modules:
             | sub("^release-"; "")
           url-query: '"https://github.com/qbittorrent/qBittorrent/archive/refs/tags/release-"
             + $version + ".tar.gz"'
+
+  - name: testing
+    buildsystem: simple
+    build-commands:
+      - QT_QPA_PLATFORM=offscreen qbittorrent -v
